--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div data-key="83" class="key">
             <kbd>S</kbd>
-            <span class="sound">Headshot</span>
+            <span class="sound">H-S</span>
         </div>
         <div data-key="68" class="key">
             <kbd>D</kbd>
@@ -23,7 +23,7 @@
         </div>
         <div data-key="70" class="key">
             <kbd>F</kbd>
-            <span class="sound">Réplique mortelle</span>
+            <span class="sound">Trash</span>
         </div>
         <div data-key="71" class="key">
             <kbd>G</kbd>
@@ -31,23 +31,23 @@
         </div>
         <div data-key="72" class="key">
             <kbd>H</kbd>
-            <span class="sound">Hoyoku Tenshou</span>
+            <span class="sound">Saga</span>
         </div>
         <div data-key="74" class="key">
             <kbd>J</kbd>
-            <span class="sound">Lightning Plasma</span>
+            <span class="sound">Hyoga</span>
         </div>
         <div data-key="75" class="key">
             <kbd>K</kbd>
-            <span class="sound">Rozan</span>
+            <span class="sound">kiki</span>
         </div>
         <div data-key="76" class="key">
             <kbd>L</kbd>
-            <span class="sound">Star Dust Revolution</span>
+            <span class="sound">Aiyorosu</span>
         </div>
         <div data-key="77" class="key">
             <kbd>M</kbd>
-            <span class="sound">Starlight Extinction</span>
+            <span class="sound">shiryu</span>
         </div>
     </div>
 
@@ -56,9 +56,9 @@
     <audio data-key="68" src="assets/audio/funny/nooo.mp3" ></audio>
     <audio data-key="70" src="assets/audio/funny/gore.mp3" ></audio>
     <audio data-key="71" src="assets/audio/funny/tg.mp3" ></audio>
-    <audio data-key="72" src="assets/audio/ss/Hyogadiamonddust.mp3" ></audio>
-    <audio data-key="74" src="assets/audio/ss/lighteningplasma-1.mp3" ></audio>
-    <audio data-key="75" src="assets/audio/ss/Rozan.mp3" ></audio>
+    <audio data-key="72" src="assets/audio/ss/anotherdimension.mp3" ></audio>
+    <audio data-key="74" src="assets/audio/ss/diamondust.mp3" ></audio>
+    <audio data-key="75" src="assets/audio/ss/galaxianexplosion.mp3" ></audio>
     <audio data-key="76" src="assets/audio/ss/lighteningplasma-1.mp3" ></audio>
     <audio data-key="77" src="assets/audio/ss/Rozan.mp3" ></audio>
 
